--- a/SherloQL/app/build.gradle
+++ b/SherloQL/app/build.gradle
@@ -1,6 +1,3 @@
-//client id:
-//992171811353-aap4lcvpl08ncjkmmj0l4p6b1nf9mcba.apps.googleusercontent.com
-
 apply plugin: 'com.android.application'
 
 android {
@@ -8,11 +5,11 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "de.sep.sherloql"
+        applicationId 'de.tubs.sherloql'
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 3
-        versionName "1.0"
+        versionCode 5
+        versionName '1.2'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -23,6 +20,8 @@ android {
         // but continue the build even when errors are found:
         //abortOnError false
     }
+
+
 
     buildTypes {
         release {
@@ -38,6 +37,8 @@ android {
 
 }
 
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -52,9 +53,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
-    // Achievements
-    implementation 'com.google.android.gms:play-services-games:21.0.0'
-    implementation "com.google.android.gms:play-services-auth:19.0.0"
 
     // Datenbank- Dependencies
     def room_version = "2.2.5"
